infrastructure/kiali/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kiali
  labels:
    istio.io/rev: stable
    name: kiali
