infrastructure/kiali/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: kiali
  namespace: kiali
spec:
  selector:
    app: istio-gateway
    istio: gateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - network.lefranc-0.pauwelslabs.com
    tls:
      httpsRedirect: true
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - network.lefranc-0.pauwelslabs.com
    tls:
      mode: SIMPLE
      credentialName: kiali-tls
