infrastructure/kiali/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: kiali
  namespace: kiali
spec:
  hosts:
  - network.lefranc-0.pauwelslabs.com
  gateways:
    - kiali
  - mesh
  http:
  - name: "kiali"
    route:
    - destination:
        port:
          number: 20001
        host: kiali.kiali.svc.cluster.local
